--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
+// ...existing code...
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <p>this is a new reportiory
-    </p>
+    <p>this is a new repository</p>
 </body>
 </html>
+// ...existing code...
